# bookmanager

./: .gitignore  README.md  READMI.md
backend/bookmanager/: pyproject.toml
backend/bookmanager/bookmanager/: settings.py
backend/bookmanager/books/: models.py  serializers.py  tests.py  urls.py  views.py
backend/bookmanager/books/migrations/: 0004_book_pages_alter_book_cover_alter_book_description_and_more.py
backend/bookmanager/locations/: models.py
frontend/vue-project/src/: App.vue  main.js
frontend/vue-project/src/assets/css/: books_list.css  locations_selects.css  theme.css
frontend/vue-project/src/assets/styles/: main.css
frontend/vue-project/src/components/: BookModal.vue  BookTable.vue  BooksList.vue  LocationsList.vue  NavBar.vue
frontend/vue-project/src/composables/: useTheme.js
frontend/vue-project/src/layouts/: MainLayout.vue
frontend/vue-project/src/router/: index.js
frontend/vue-project/src/views/: BooksList.vue  Home.vue  LoanBook.vue  ReadersList.vue
