[project]
name = "bookmanager"
version = "0.1.0"
description = "API для управления книгами на DRF"
authors = [
    {name = "anton", email = "nagulin03@mail.ru"}
]
license = {text = ""}
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "django",
    "djangorestframework",
    "python-dotenv",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "pysocks (>=1.7.1,<2.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "factory-boy",
    "black",
    "isort",
    "flake8",
    "django-debug-toolbar",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
